--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
                 <div class="col-12 col-sm align-self-center">
                     <img src="img/logo.png" class="img-fluid">
                 </div>
+                <div class="col-12 col-sm align-self-center">
+                    <a role="button" class="btn btn-warning btn-lg" href="#reserve">
+                        Reserve Table
+                    </a>
+                </div>
             </div>
         </div>
     </header>
@@ -59,15 +64,20 @@
             <div class="col-12 col-sm-4 order-sm-last col-md-3">
                 <h3>Our Lipsmacking Culinary Creations</h3>
             </div>
-            <div class="media">
-                <img class="d-flex mr-3 img-thumbnail align-self-center"
-                        src="img/uthappizza.png" alt="Uthappizza">
-                <div class="media-body">
-                    <h2 class="mt-0">Uthappizza</h2>
-                    <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and
-                        Italian pizza, topped with Cerignola olives, ripe vine
-                        cherry tomatoes, Vidalia onion, Guntur chillies and
-                        Buffalo Paneer.</p>
+            <div class="col col-sm col-md">
+                <div class="media">
+                    <img class="d-flex mr-3 img-thumbnail align-self-center"
+                            src="img/uthappizza.png" alt="Uthappizza">
+                    <div class="media-body">
+                        <h2 class="mt-0">
+                            Uthappizza <span class="badge badge-danger">HOT</span> 
+                            <span class="badge badge-pill badge-secondary">$4.99</span>
+                        </h2>
+                        <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and
+                            Italian pizza, topped with Cerignola olives, ripe vine
+                            cherry tomatoes, Vidalia onion, Guntur chillies and
+                            Buffalo Paneer.</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -77,29 +87,99 @@
                 <h3>This Month's Promotions</h3>
             </div>
             <div class="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                <div class="media">
+                    <div class="media-body">
+                        <h2 class="mt-0">
+                            Weekend Grand Buffet <span class="badge badge-danger">NEW</span> 
+                        </h2>
+                        <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five
+                             different salads, six enticing appetizers, six main 
+                             entrees and five choicest desserts. Free flowing bubbly 
+                             and soft drinks. All for just $19.99 per person
+                        </p>
+                    </div>
+                    <img class="d-flex mr-3 img-thumbnail align-self-center"
+                            src="img/buffet.png" alt="buffet">
+                </div>
             </div>
         </div>
 
         <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-4 order-sm-first col-md-3">
+            <div class="col-12 col-sm-4 col-md-3 order-sm-last">
                 <h3>Meet our Culinary Specialists</h3>
             </div>
-            <div class="media">
-                <img class="d-flex mr-3 img-thumbnail align-self-center"
-                        src="img/alberto.png" alt="Alberto Somayya">
-                <div class="media-body">
-                    <h2 class="mt-0">Alberto Somayya</h2>
-                    <h4>Executive Chef</h4>
-                    <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide
-                        International experience having worked closely with
-                        whos-who in the culinary world, he specializes in
-                        creating mouthwatering Indo-Italian fusion experiences.
-                        </p>
+            <div class="col col-sm col-md">
+                <div class="media">
+                    <img class="d-flex mr-3 img-thumbnail align-self-center"
+                            src="img/alberto.png" alt="Alberto Somayya">
+                    <div class="media-body">
+                        <h2 class="mt-0">Alberto Somayya</h2>
+                        <h4>Executive Chef</h4>
+                        <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide
+                            International experience having worked closely with
+                            whos-who in the culinary world, he specializes in
+                            creating mouthwatering Indo-Italian fusion experiences.
+                            </p>
+                    </div>
                 </div>
             </div>
         </div>
+
+        <div class="row row-content align-items-center">
+            <div class="col-12 col-sm-8 mx-auto" id="reserve">
+                <div class="card">
+                    <h3 class="card-header bg-warning text-white">Reserve a Table</h3>
+                    <div class="card-body">
+                        <form>
+                            <div class="form-group row">
+                                <label for="guests" class="col-md-2 col-form-label">Number of Guests</label>
+                                <div class="col-md-10">
+                                    <div class="form-check d-inline">
+                                        <input class="form-check-input" type="radio" name="one" id="one">
+                                        <label class="form-check-label" for="exampleRadios1">1</label>
+                                    </div>
+                                    <div class="form-check d-inline">
+                                        <input class="form-check-input" type="radio" name="one" id="one">
+                                        <label class="form-check-label" for="exampleRadios1">2</label>
+                                    </div>
+                                    <div class="form-check d-inline">
+                                        <input class="form-check-input" type="radio" name="one" id="one">
+                                        <label class="form-check-label" for="exampleRadios1">3</label>
+                                    </div>
+                                    <div class="form-check d-inline">
+                                        <input class="form-check-input" type="radio" name="one" id="one">
+                                        <label class="form-check-label" for="exampleRadios1">4</label>
+                                    </div>
+                                    <div class="form-check d-inline">
+                                        <input class="form-check-input" type="radio" name="one" id="one">
+                                        <label class="form-check-label" for="exampleRadios1">5</label>
+                                    </div>
+                                    <div class="form-check d-inline">
+                                        <input class="form-check-input" type="radio" name="one" id="one">
+                                        <label class="form-check-label" for="exampleRadios1">6</label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label for="datetime" class="col-12 col-md-2 col-form-label">Date and Time</label>
+                                <div class="col-12 col-md-5">
+                                    <input type="text" class="form-control" id="date" name="date" placeholder="Date">
+                                </div>
+                                <div class="col-12 col-md-5">
+                                    <input type="text" class="form-control" id="time" name="time" placeholder="Time">
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <div class="offset-md-2 col-md-10">
+                                    <button type="submit" class="btn btn-primary">Reserve</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 
     <footer class="footer">
